--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ark-bls12-381 = {version = "0.3.0"}
 ark-ec = {version = "0.3.0"}
 ark-ff = {version = "0.3.0"}
 ark-std = {version = "0.3.0"}
+num-bigint = {version = "0.4.0"}
 
 [dev-dependencies]
 criterion = "0.3"
