--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ ark-ec = {version = "0.3.0"}
 ark-ff = {version = "0.3.0"}
 ark-std = {version = "0.3.0"}
 num-bigint = {version = "0.4.0"}
+all_asserts = "2.3.1"
 
 [dev-dependencies]
 criterion = "0.3"
