--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,11 @@ rust-version = "1.63"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-ark-bls12-381 = {version = "0.3.0"}
-ark-ec = {version = "0.3.0"}
-ark-ff = {version = "0.3.0"}
-ark-std = {version = "0.3.0"}
-num-bigint = {version = "0.4.0"}
+ark-bls12-381 = "0.3.0"
+ark-ec = "0.3.0"
+ark-ff = "0.3.0"
+ark-std = "0.3.0"
+num-bigint = "0.4.0"
 all_asserts = "2.3.1"
 
 [dev-dependencies]
