Remove glv optimization for now
It seems to be used only on the curve bls12-381 curve.
TODO: Re-add this optimization for our curve

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ rust-version = "1.63"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-ark-bls12-381 = "0.3.0"
+# ark-bls12-381 = "0.3.0"
 ark-ec = "0.3.0"
 ark-ff = "0.3.0"
 ark-std = "0.3.0"
